k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: stockfacts
  name: stockfacts
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stockfacts
    spec:
      containers:
        - name: springbootndaqfacts
          image: gcr.io/stockfactsproject/stockfactsproject
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
