k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stockfacts
  labels:
    last_updated: "1"
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: stockfacts
            servicePort: 80
